// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate routes > react - match snapshot > client code 1`] = `
"import React from "react";
const __pages_import_0__ = React.lazy(() => import("/examples/react/src/pages/[...all].tsx"));
const __pages_import_1__ = React.lazy(() => import("/examples/react/src/pages/about.tsx"));
const __pages_import_2__ = React.lazy(() => import("/examples/react/src/pages/about/index.tsx"));
const __pages_import_3__ = React.lazy(() => import("/examples/react/src/pages/components.tsx"));
import __pages_import_4__ from "/examples/react/src/pages/index.tsx";
const __pages_import_5__ = React.lazy(() => import("/examples/react/src/pages/blog/[...all].tsx"));
const __pages_import_6__ = React.lazy(() => import("/examples/react/src/pages/blog/[id].tsx"));
const __pages_import_7__ = React.lazy(() => import("/examples/react/src/pages/blog/index.tsx"));
const __pages_import_8__ = React.lazy(() => import("/examples/react/src/pages/blog/today/[...all].tsx"));
const __pages_import_9__ = React.lazy(() => import("/examples/react/src/pages/blog/today/index.tsx"));

const routes = [{"caseSensitive":false,"path":"*","element":React.createElement(__pages_import_0__)},{"caseSensitive":false,"path":"about","element":React.createElement(__pages_import_1__),"children":[{"caseSensitive":false,"path":"","element":React.createElement(__pages_import_2__)}]},{"caseSensitive":false,"path":"components","element":React.createElement(__pages_import_3__)},{"caseSensitive":false,"path":"/","element":React.createElement(__pages_import_4__)},{"caseSensitive":false,"path":"blog","children":[{"caseSensitive":false,"path":"*","element":React.createElement(__pages_import_5__)},{"caseSensitive":false,"path":":id","element":React.createElement(__pages_import_6__)},{"caseSensitive":false,"path":"","element":React.createElement(__pages_import_7__)},{"caseSensitive":false,"path":"today","children":[{"caseSensitive":false,"path":"*","element":React.createElement(__pages_import_8__)},{"caseSensitive":false,"path":"","element":React.createElement(__pages_import_9__)}]}]}];

export default routes;"
`;

exports[`generate routes > react - match snapshot > routes 1`] = `
[
  {
    "caseSensitive": false,
    "element": "/examples/react/src/pages/[...all].tsx",
    "path": "*",
  },
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/react/src/pages/about/index.tsx",
        "path": "",
      },
    ],
    "element": "/examples/react/src/pages/about.tsx",
    "path": "about",
  },
  {
    "caseSensitive": false,
    "element": "/examples/react/src/pages/components.tsx",
    "path": "components",
  },
  {
    "caseSensitive": false,
    "element": "/examples/react/src/pages/index.tsx",
    "path": "/",
  },
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/react/src/pages/blog/[...all].tsx",
        "path": "*",
      },
      {
        "caseSensitive": false,
        "element": "/examples/react/src/pages/blog/[id].tsx",
        "path": ":id",
      },
      {
        "caseSensitive": false,
        "element": "/examples/react/src/pages/blog/index.tsx",
        "path": "",
      },
      {
        "caseSensitive": false,
        "children": [
          {
            "caseSensitive": false,
            "element": "/examples/react/src/pages/blog/today/[...all].tsx",
            "path": "*",
          },
          {
            "caseSensitive": false,
            "element": "/examples/react/src/pages/blog/today/index.tsx",
            "path": "",
          },
        ],
        "path": "today",
      },
    ],
    "path": "blog",
  },
]
`;

exports[`generate routes > routeStyle > nuxt style match snapshot > client code 1`] = `
"const __pages_import_0__ = () => import("/examples/nuxt-style/src/pages/_.vue");
const __pages_import_1__ = () => import("/examples/nuxt-style/src/pages/_sensor/current.vue");
const __pages_import_2__ = () => import("/examples/nuxt-style/src/pages/about.vue");
const __pages_import_3__ = () => import("/examples/nuxt-style/src/pages/about/_id.vue");
const __pages_import_4__ = () => import("/examples/nuxt-style/src/pages/about/index.vue");
const __pages_import_5__ = () => import("/examples/nuxt-style/src/pages/about/who/me.vue");
const __pages_import_6__ = () => import("/examples/nuxt-style/src/pages/components.vue");
import __pages_import_7__ from "/examples/nuxt-style/src/pages/index.vue";
const __pages_import_8__ = () => import("/examples/nuxt-style/src/pages/optional/_id.vue");

const routes = [{"name":"all","path":"/:all(.*)*","component":__pages_import_0__,"props":true},{"name":"sensor-current","path":"/:sensor/current","component":__pages_import_1__,"props":true},{"path":"/about","component":__pages_import_2__,"children":[{"name":"about-id","path":":id","component":__pages_import_3__,"props":true},{"name":"about","path":"","component":__pages_import_4__,"props":true},{"name":"who-me-override","path":"who/me","component":__pages_import_5__,"props":true,"meta":{"requiresAuth":false}}],"props":true},{"name":"components","path":"/components","component":__pages_import_6__,"props":true},{"name":"name-override","path":"/","component":__pages_import_7__,"props":true,"meta":{"requiresAuth":false}},{"name":"optional-id","path":"/optional/:id?","component":__pages_import_8__,"props":true}];

export default routes;"
`;

exports[`generate routes > routeStyle > nuxt style match snapshot > routes 1`] = `
[
  {
    "component": "/examples/nuxt-style/src/pages/_.vue",
    "customBlock": undefined,
    "name": "all",
    "path": "/:all(.*)*",
    "props": true,
  },
  {
    "component": "/examples/nuxt-style/src/pages/_sensor/current.vue",
    "customBlock": undefined,
    "name": "sensor-current",
    "path": "/:sensor/current",
    "props": true,
  },
  {
    "children": [
      {
        "component": "/examples/nuxt-style/src/pages/about/_id.vue",
        "customBlock": undefined,
        "name": "about-id",
        "path": ":id",
        "props": true,
      },
      {
        "component": "/examples/nuxt-style/src/pages/about/index.vue",
        "customBlock": undefined,
        "name": "about",
        "path": "",
        "props": true,
      },
      {
        "component": "/examples/nuxt-style/src/pages/about/who/me.vue",
        "meta": {
          "requiresAuth": false,
        },
        "name": "who-me-override",
        "path": "who/me",
        "props": true,
      },
    ],
    "component": "/examples/nuxt-style/src/pages/about.vue",
    "customBlock": undefined,
    "path": "/about",
    "props": true,
  },
  {
    "component": "/examples/nuxt-style/src/pages/components.vue",
    "customBlock": undefined,
    "name": "components",
    "path": "/components",
    "props": true,
  },
  {
    "component": "/examples/nuxt-style/src/pages/index.vue",
    "meta": {
      "requiresAuth": false,
    },
    "name": "name-override",
    "path": "/",
    "props": true,
  },
  {
    "component": "/examples/nuxt-style/src/pages/optional/_id.vue",
    "customBlock": undefined,
    "name": "optional-id",
    "path": "/optional/:id?",
    "props": true,
  },
]
`;

exports[`generate routes > routeStyle > remix Style match snapshot > client code 1`] = `
"import React from "react";
const __pages_import_0__ = React.lazy(() => import("/examples/remix-style/src/pages/__marketing.tsx"));
const __pages_import_1__ = React.lazy(() => import("/examples/remix-style/src/pages/__marketing/product.tsx"));
const __pages_import_2__ = React.lazy(() => import("/examples/remix-style/src/pages/[sitemap.xml].tsx"));
const __pages_import_3__ = React.lazy(() => import("/examples/remix-style/src/pages/$.tsx"));
const __pages_import_4__ = React.lazy(() => import("/examples/remix-style/src/pages/about.tsx"));
const __pages_import_5__ = React.lazy(() => import("/examples/remix-style/src/pages/about/index.tsx"));
const __pages_import_6__ = React.lazy(() => import("/examples/remix-style/src/pages/blog.authors.tsx"));
const __pages_import_7__ = React.lazy(() => import("/examples/remix-style/src/pages/blog.tsx"));
const __pages_import_8__ = React.lazy(() => import("/examples/remix-style/src/pages/blog/$.tsx"));
const __pages_import_9__ = React.lazy(() => import("/examples/remix-style/src/pages/blog/$id.tsx"));
const __pages_import_10__ = React.lazy(() => import("/examples/remix-style/src/pages/blog/index.tsx"));
const __pages_import_11__ = React.lazy(() => import("/examples/remix-style/src/pages/blog/today/index.tsx"));
import __pages_import_12__ from "/examples/remix-style/src/pages/index.tsx";

const routes = [{"caseSensitive":false,"element":React.createElement(__pages_import_0__),"children":[{"caseSensitive":false,"path":"product","element":React.createElement(__pages_import_1__)}]},{"caseSensitive":false,"path":"sitemap.xml","element":React.createElement(__pages_import_2__)},{"caseSensitive":false,"path":"*","element":React.createElement(__pages_import_3__)},{"caseSensitive":false,"path":"about","element":React.createElement(__pages_import_4__),"children":[{"caseSensitive":false,"path":"","element":React.createElement(__pages_import_5__)}]},{"caseSensitive":false,"path":"blog/authors","element":React.createElement(__pages_import_6__)},{"caseSensitive":false,"path":"blog","element":React.createElement(__pages_import_7__),"children":[{"caseSensitive":false,"path":"*","element":React.createElement(__pages_import_8__)},{"caseSensitive":false,"path":":id","element":React.createElement(__pages_import_9__)},{"caseSensitive":false,"path":"","element":React.createElement(__pages_import_10__)},{"caseSensitive":false,"path":"today","children":[{"caseSensitive":false,"path":"","element":React.createElement(__pages_import_11__)}]}]},{"caseSensitive":false,"path":"/","element":React.createElement(__pages_import_12__)}];

export default routes;"
`;

exports[`generate routes > routeStyle > remix Style match snapshot > routes 1`] = `
[
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/remix-style/src/pages/__marketing/product.tsx",
        "path": "product",
      },
    ],
    "element": "/examples/remix-style/src/pages/__marketing.tsx",
    "path": undefined,
  },
  {
    "caseSensitive": false,
    "element": "/examples/remix-style/src/pages/[sitemap.xml].tsx",
    "path": "sitemap.xml",
  },
  {
    "caseSensitive": false,
    "element": "/examples/remix-style/src/pages/$.tsx",
    "path": "*",
  },
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/remix-style/src/pages/about/index.tsx",
        "path": "",
      },
    ],
    "element": "/examples/remix-style/src/pages/about.tsx",
    "path": "about",
  },
  {
    "caseSensitive": false,
    "element": "/examples/remix-style/src/pages/blog.authors.tsx",
    "path": "blog/authors",
  },
  {
    "caseSensitive": false,
    "children": [
      {
        "caseSensitive": false,
        "element": "/examples/remix-style/src/pages/blog/$.tsx",
        "path": "*",
      },
      {
        "caseSensitive": false,
        "element": "/examples/remix-style/src/pages/blog/$id.tsx",
        "path": ":id",
      },
      {
        "caseSensitive": false,
        "element": "/examples/remix-style/src/pages/blog/index.tsx",
        "path": "",
      },
      {
        "caseSensitive": false,
        "children": [
          {
            "caseSensitive": false,
            "element": "/examples/remix-style/src/pages/blog/today/index.tsx",
            "path": "",
          },
        ],
        "path": "today",
      },
    ],
    "element": "/examples/remix-style/src/pages/blog.tsx",
    "path": "blog",
  },
  {
    "caseSensitive": false,
    "element": "/examples/remix-style/src/pages/index.tsx",
    "path": "/",
  },
]
`;

exports[`generate routes > solid - match snapshot > client code 1`] = `
"import * as Solid from "solid-js";
const __pages_import_0__ = Solid.lazy(() => import("/examples/solid/src/pages/[...all].tsx"));
const __pages_import_1__ = Solid.lazy(() => import("/examples/solid/src/pages/[sensor].tsx"));
const __pages_import_2__ = Solid.lazy(() => import("/examples/solid/src/pages/[sensor]/current.tsx"));
const __pages_import_3__ = Solid.lazy(() => import("/examples/solid/src/pages/about.tsx"));
const __pages_import_4__ = Solid.lazy(() => import("/examples/solid/src/pages/about/[id].tsx"));
const __pages_import_5__ = Solid.lazy(() => import("/examples/solid/src/pages/about/[id]/more.tsx"));
const __pages_import_6__ = Solid.lazy(() => import("/examples/solid/src/pages/about/[id]/nested.tsx"));
const __pages_import_7__ = Solid.lazy(() => import("/examples/solid/src/pages/about/index.tsx"));
const __pages_import_8__ = Solid.lazy(() => import("/examples/solid/src/pages/components.tsx"));
import __pages_import_9__ from "/examples/solid/src/pages/index.tsx";
const __pages_import_10__ = Solid.lazy(() => import("/examples/solid/src/pages/blog/[id].tsx"));
const __pages_import_11__ = Solid.lazy(() => import("/examples/solid/src/pages/blog/index.tsx"));
const __pages_import_12__ = Solid.lazy(() => import("/examples/solid/src/pages/blog/today/[...all].tsx"));
const __pages_import_13__ = Solid.lazy(() => import("/examples/solid/src/pages/blog/today/index.tsx"));

const routes = [{"path":"*","element":__pages_import_0__,"component":__pages_import_0__},{"path":":sensor","element":__pages_import_1__,"component":__pages_import_1__,"children":[{"path":"current","element":__pages_import_2__,"component":__pages_import_2__}]},{"path":"about","element":__pages_import_3__,"component":__pages_import_3__,"children":[{"path":":id","element":__pages_import_4__,"component":__pages_import_4__,"children":[{"path":"more","element":__pages_import_5__,"component":__pages_import_5__},{"path":"nested","element":__pages_import_6__,"component":__pages_import_6__}]},{"path":"","element":__pages_import_7__,"component":__pages_import_7__}]},{"path":"components","element":__pages_import_8__,"component":__pages_import_8__},{"path":"/","element":__pages_import_9__,"component":__pages_import_9__},{"path":"blog","children":[{"path":":id","element":__pages_import_10__,"component":__pages_import_10__},{"path":"","element":__pages_import_11__,"component":__pages_import_11__},{"path":"today","children":[{"path":"*","element":__pages_import_12__,"component":__pages_import_12__},{"path":"","element":__pages_import_13__,"component":__pages_import_13__}]}]}];

export default routes;"
`;

exports[`generate routes > solid - match snapshot > routes 1`] = `
[
  {
    "component": "/examples/solid/src/pages/[...all].tsx",
    "element": "/examples/solid/src/pages/[...all].tsx",
    "path": "*",
  },
  {
    "children": [
      {
        "component": "/examples/solid/src/pages/[sensor]/current.tsx",
        "element": "/examples/solid/src/pages/[sensor]/current.tsx",
        "path": "current",
      },
    ],
    "component": "/examples/solid/src/pages/[sensor].tsx",
    "element": "/examples/solid/src/pages/[sensor].tsx",
    "path": ":sensor",
  },
  {
    "children": [
      {
        "children": [
          {
            "component": "/examples/solid/src/pages/about/[id]/more.tsx",
            "element": "/examples/solid/src/pages/about/[id]/more.tsx",
            "path": "more",
          },
          {
            "component": "/examples/solid/src/pages/about/[id]/nested.tsx",
            "element": "/examples/solid/src/pages/about/[id]/nested.tsx",
            "path": "nested",
          },
        ],
        "component": "/examples/solid/src/pages/about/[id].tsx",
        "element": "/examples/solid/src/pages/about/[id].tsx",
        "path": ":id",
      },
      {
        "component": "/examples/solid/src/pages/about/index.tsx",
        "element": "/examples/solid/src/pages/about/index.tsx",
        "path": "",
      },
    ],
    "component": "/examples/solid/src/pages/about.tsx",
    "element": "/examples/solid/src/pages/about.tsx",
    "path": "about",
  },
  {
    "component": "/examples/solid/src/pages/components.tsx",
    "element": "/examples/solid/src/pages/components.tsx",
    "path": "components",
  },
  {
    "component": "/examples/solid/src/pages/index.tsx",
    "element": "/examples/solid/src/pages/index.tsx",
    "path": "/",
  },
  {
    "children": [
      {
        "component": "/examples/solid/src/pages/blog/[id].tsx",
        "element": "/examples/solid/src/pages/blog/[id].tsx",
        "path": ":id",
      },
      {
        "component": "/examples/solid/src/pages/blog/index.tsx",
        "element": "/examples/solid/src/pages/blog/index.tsx",
        "path": "",
      },
      {
        "children": [
          {
            "component": "/examples/solid/src/pages/blog/today/[...all].tsx",
            "element": "/examples/solid/src/pages/blog/today/[...all].tsx",
            "path": "*",
          },
          {
            "component": "/examples/solid/src/pages/blog/today/index.tsx",
            "element": "/examples/solid/src/pages/blog/today/index.tsx",
            "path": "",
          },
        ],
        "path": "today",
      },
    ],
    "path": "blog",
  },
]
`;

exports[`generate routes > use route name separator > client code 1`] = `
"const __pages_import_0__ = () => import("/examples/vue/src/pages/blog/today/index.vue");
const __pages_import_1__ = () => import("/examples/vue/src/pages/blog/index.vue");
import __pages_import_2__ from "/examples/vue/src/pages/index.vue";
const __pages_import_3__ = () => import("/examples/vue/src/pages/components.vue");
const __pages_import_4__ = () => import("/examples/vue/src/pages/about.vue");
const __pages_import_5__ = () => import("/examples/vue/src/pages/about/index.vue");
const __pages_import_6__ = () => import("/examples/vue/src/pages/about/[id].vue");
const __pages_import_7__ = () => import("/examples/vue/src/pages/about/[id]/more.vue");
const __pages_import_8__ = () => import("/examples/vue/src/pages/about/[id]/nested.vue");
const __pages_import_9__ = () => import("/examples/vue/src/pages/[...all].vue");
const __pages_import_10__ = () => import("/examples/vue/src/pages/[sensor].vue");
const __pages_import_11__ = () => import("/examples/vue/src/pages/[sensor]/current.vue");
const __pages_import_12__ = () => import("/examples/vue/src/pages/blog/[id].vue");
const __pages_import_13__ = () => import("/examples/vue/src/pages/blog/today/[...all].vue");

const routes = [{"name":"blog/today","path":"/blog/today","component":__pages_import_0__,"props":true},{"name":"blog","path":"/blog","component":__pages_import_1__,"props":true},{"name":"homepage","path":"/","component":__pages_import_2__,"props":true,"meta":{"requiresAuth":false}},{"name":"components","path":"/components","component":__pages_import_3__,"props":true,"meta":{"lang":"yaml"}},{"path":"/about","component":__pages_import_4__,"children":[{"name":"about","path":"","component":__pages_import_5__,"props":true},{"name":"about-user-id","path":":id","component":__pages_import_6__,"children":[{"name":"about/id/more","path":"more","component":__pages_import_7__,"props":true},{"name":"about/id/nested","path":"nested","component":__pages_import_8__,"props":true}],"props":true,"meta":{"requiresAuth":true}}],"props":true,"meta":{"lang":"yml"}},{"name":"all","path":"/:all(.*)*","component":__pages_import_9__,"props":true},{"name":"sensor","path":"/:sensor","component":__pages_import_10__,"children":[{"name":"sensor/current","path":"current","component":__pages_import_11__,"props":true}],"props":true},{"name":"blog-id","path":"/blog/:id","component":__pages_import_12__,"props":true,"meta":{"requiresAuth":false}},{"name":"blog/today/all","path":"/blog/today/:all(.*)","component":__pages_import_13__,"props":true}];

export default routes;"
`;

exports[`generate routes > vue - async mode match snapshot > client code 1`] = `
"const __pages_import_0__ = () => import("/examples/vue/src/pages/[...all].vue");
const __pages_import_1__ = () => import("/examples/vue/src/pages/[sensor].vue");
const __pages_import_2__ = () => import("/examples/vue/src/pages/[sensor]/current.vue");
const __pages_import_3__ = () => import("/examples/vue/src/pages/about.vue");
const __pages_import_4__ = () => import("/examples/vue/src/pages/about/[id].vue");
const __pages_import_5__ = () => import("/examples/vue/src/pages/about/[id]/more.vue");
const __pages_import_6__ = () => import("/examples/vue/src/pages/about/[id]/nested.vue");
const __pages_import_7__ = () => import("/examples/vue/src/pages/about/index.vue");
const __pages_import_8__ = () => import("/examples/vue/src/pages/blog/[id].vue");
const __pages_import_9__ = () => import("/examples/vue/src/pages/blog/index.vue");
const __pages_import_10__ = () => import("/examples/vue/src/pages/blog/today/[...all].vue");
const __pages_import_11__ = () => import("/examples/vue/src/pages/blog/today/index.vue");
const __pages_import_12__ = () => import("/examples/vue/src/pages/components.vue");
import __pages_import_13__ from "/examples/vue/src/pages/index.vue";

const routes = [{"name":"all","path":"/:all(.*)*","component":__pages_import_0__,"props":true},{"name":"sensor","path":"/:sensor","component":__pages_import_1__,"children":[{"name":"sensor-current","path":"current","component":__pages_import_2__,"props":true}],"props":true},{"path":"/about","component":__pages_import_3__,"children":[{"name":"about-user-id","path":":id","component":__pages_import_4__,"children":[{"name":"about-id-more","path":"more","component":__pages_import_5__,"props":true},{"name":"about-id-nested","path":"nested","component":__pages_import_6__,"props":true}],"props":true,"meta":{"requiresAuth":true}},{"name":"about","path":"","component":__pages_import_7__,"props":(route2)=>({query:route2.query.q})}],"props":true,"meta":{"lang":"yml"}},{"name":"blog-id","path":"/blog/:id","component":__pages_import_8__,"props":true,"meta":{"requiresAuth":false}},{"name":"blog","path":"/blog","component":__pages_import_9__,"props":true},{"name":"blog-today-all","path":"/blog/today/:all(.*)","component":__pages_import_10__,"props":true},{"name":"blog-today","path":"/blog/today","component":__pages_import_11__,"props":true},{"name":"components","path":"/components","component":__pages_import_12__,"props":true,"meta":{"lang":"yaml"}},{"name":"homepage","path":"/","component":__pages_import_13__,"props":true,"meta":{"requiresAuth":false}}];

export default routes;"
`;

exports[`generate routes > vue - async mode match snapshot > routes 1`] = `
[
  {
    "component": "/examples/vue/src/pages/[...all].vue",
    "customBlock": undefined,
    "name": "all",
    "path": "/:all(.*)*",
    "props": true,
  },
  {
    "children": [
      {
        "component": "/examples/vue/src/pages/[sensor]/current.vue",
        "customBlock": undefined,
        "name": "sensor-current",
        "path": "current",
        "props": true,
      },
    ],
    "component": "/examples/vue/src/pages/[sensor].vue",
    "customBlock": undefined,
    "name": "sensor",
    "path": "/:sensor",
    "props": true,
  },
  {
    "children": [
      {
        "children": [
          {
            "component": "/examples/vue/src/pages/about/[id]/more.vue",
            "customBlock": undefined,
            "name": "about-id-more",
            "path": "more",
            "props": true,
          },
          {
            "component": "/examples/vue/src/pages/about/[id]/nested.vue",
            "customBlock": undefined,
            "name": "about-id-nested",
            "path": "nested",
            "props": true,
          },
        ],
        "component": "/examples/vue/src/pages/about/[id].vue",
        "meta": {
          "requiresAuth": true,
        },
        "name": "about-user-id",
        "path": ":id",
        "props": true,
      },
      {
        "component": "/examples/vue/src/pages/about/index.vue",
        "customBlock": undefined,
        "name": "about",
        "path": "",
        "props": [Function],
      },
    ],
    "component": "/examples/vue/src/pages/about.vue",
    "meta": {
      "lang": "yml",
    },
    "path": "/about",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/blog/[id].vue",
    "meta": {
      "requiresAuth": false,
    },
    "name": "blog-id",
    "path": "/blog/:id",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/blog/index.vue",
    "customBlock": undefined,
    "name": "blog",
    "path": "/blog",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/blog/today/[...all].vue",
    "customBlock": undefined,
    "name": "blog-today-all",
    "path": "/blog/today/:all(.*)",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/blog/today/index.vue",
    "customBlock": undefined,
    "name": "blog-today",
    "path": "/blog/today",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/components.vue",
    "meta": {
      "lang": "yaml",
    },
    "name": "components",
    "path": "/components",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/index.vue",
    "meta": {
      "requiresAuth": false,
    },
    "name": "homepage",
    "path": "/",
    "props": true,
  },
]
`;

exports[`generate routes > vue - import absolute path match snapshot > client code 1`] = `
"const __pages_import_0__ = () => import("/mock/fs/examples/vue/src/pages/[...all].vue");
const __pages_import_1__ = () => import("/mock/fs/examples/vue/src/pages/[sensor].vue");
const __pages_import_2__ = () => import("/mock/fs/examples/vue/src/pages/[sensor]/current.vue");
const __pages_import_3__ = () => import("/mock/fs/examples/vue/src/pages/about.vue");
const __pages_import_4__ = () => import("/mock/fs/examples/vue/src/pages/about/[id].vue");
const __pages_import_5__ = () => import("/mock/fs/examples/vue/src/pages/about/[id]/more.vue");
const __pages_import_6__ = () => import("/mock/fs/examples/vue/src/pages/about/[id]/nested.vue");
const __pages_import_7__ = () => import("/mock/fs/examples/vue/src/pages/about/index.vue");
const __pages_import_8__ = () => import("/mock/fs/examples/vue/src/pages/blog/[id].vue");
const __pages_import_9__ = () => import("/mock/fs/examples/vue/src/pages/blog/index.vue");
const __pages_import_10__ = () => import("/mock/fs/examples/vue/src/pages/blog/today/[...all].vue");
const __pages_import_11__ = () => import("/mock/fs/examples/vue/src/pages/blog/today/index.vue");
const __pages_import_12__ = () => import("/mock/fs/examples/vue/src/pages/components.vue");
const __pages_import_13__ = () => import("/mock/fs/examples/vue/src/pages/index.vue");

const routes = [{"name":"all","path":"/:all(.*)*","component":__pages_import_0__,"props":true},{"name":"sensor","path":"/:sensor","component":__pages_import_1__,"children":[{"name":"sensor-current","path":"current","component":__pages_import_2__,"props":true}],"props":true},{"path":"/about","component":__pages_import_3__,"children":[{"name":"about-user-id","path":":id","component":__pages_import_4__,"children":[{"name":"about-id-more","path":"more","component":__pages_import_5__,"props":true},{"name":"about-id-nested","path":"nested","component":__pages_import_6__,"props":true}],"props":true,"meta":{"requiresAuth":true}},{"name":"about","path":"","component":__pages_import_7__,"props":true}],"props":true,"meta":{"lang":"yml"}},{"name":"blog-id","path":"/blog/:id","component":__pages_import_8__,"props":true,"meta":{"requiresAuth":false}},{"name":"blog","path":"/blog","component":__pages_import_9__,"props":true},{"name":"blog-today-all","path":"/blog/today/:all(.*)","component":__pages_import_10__,"props":true},{"name":"blog-today","path":"/blog/today","component":__pages_import_11__,"props":true},{"name":"components","path":"/components","component":__pages_import_12__,"props":true,"meta":{"lang":"yaml"}},{"name":"homepage","path":"/","component":__pages_import_13__,"props":true,"meta":{"requiresAuth":false}}];

export default routes;"
`;

exports[`generate routes > vue - import absolute path match snapshot > routes 1`] = `
[
  {
    "component": "/mock/fs/examples/vue/src/pages/[...all].vue",
    "customBlock": undefined,
    "name": "all",
    "path": "/:all(.*)*",
    "props": true,
  },
  {
    "children": [
      {
        "component": "/mock/fs/examples/vue/src/pages/[sensor]/current.vue",
        "customBlock": undefined,
        "name": "sensor-current",
        "path": "current",
        "props": true,
      },
    ],
    "component": "/mock/fs/examples/vue/src/pages/[sensor].vue",
    "customBlock": undefined,
    "name": "sensor",
    "path": "/:sensor",
    "props": true,
  },
  {
    "children": [
      {
        "children": [
          {
            "component": "/mock/fs/examples/vue/src/pages/about/[id]/more.vue",
            "customBlock": undefined,
            "name": "about-id-more",
            "path": "more",
            "props": true,
          },
          {
            "component": "/mock/fs/examples/vue/src/pages/about/[id]/nested.vue",
            "customBlock": undefined,
            "name": "about-id-nested",
            "path": "nested",
            "props": true,
          },
        ],
        "component": "/mock/fs/examples/vue/src/pages/about/[id].vue",
        "meta": {
          "requiresAuth": true,
        },
        "name": "about-user-id",
        "path": ":id",
        "props": true,
      },
      {
        "component": "/mock/fs/examples/vue/src/pages/about/index.vue",
        "customBlock": undefined,
        "name": "about",
        "path": "",
        "props": true,
      },
    ],
    "component": "/mock/fs/examples/vue/src/pages/about.vue",
    "meta": {
      "lang": "yml",
    },
    "path": "/about",
    "props": true,
  },
  {
    "component": "/mock/fs/examples/vue/src/pages/blog/[id].vue",
    "meta": {
      "requiresAuth": false,
    },
    "name": "blog-id",
    "path": "/blog/:id",
    "props": true,
  },
  {
    "component": "/mock/fs/examples/vue/src/pages/blog/index.vue",
    "customBlock": undefined,
    "name": "blog",
    "path": "/blog",
    "props": true,
  },
  {
    "component": "/mock/fs/examples/vue/src/pages/blog/today/[...all].vue",
    "customBlock": undefined,
    "name": "blog-today-all",
    "path": "/blog/today/:all(.*)",
    "props": true,
  },
  {
    "component": "/mock/fs/examples/vue/src/pages/blog/today/index.vue",
    "customBlock": undefined,
    "name": "blog-today",
    "path": "/blog/today",
    "props": true,
  },
  {
    "component": "/mock/fs/examples/vue/src/pages/components.vue",
    "meta": {
      "lang": "yaml",
    },
    "name": "components",
    "path": "/components",
    "props": true,
  },
  {
    "component": "/mock/fs/examples/vue/src/pages/index.vue",
    "meta": {
      "requiresAuth": false,
    },
    "name": "homepage",
    "path": "/",
    "props": true,
  },
]
`;

exports[`generate routes > vue - sync mode match snapshot > client code 1`] = `
"import __pages_import_0__ from "/examples/vue/src/pages/[...all].vue";
import __pages_import_1__ from "/examples/vue/src/pages/[sensor].vue";
import __pages_import_2__ from "/examples/vue/src/pages/[sensor]/current.vue";
import __pages_import_3__ from "/examples/vue/src/pages/about.vue";
import __pages_import_4__ from "/examples/vue/src/pages/about/[id].vue";
import __pages_import_5__ from "/examples/vue/src/pages/about/[id]/more.vue";
import __pages_import_6__ from "/examples/vue/src/pages/about/[id]/nested.vue";
import __pages_import_7__ from "/examples/vue/src/pages/about/index.vue";
import __pages_import_8__ from "/examples/vue/src/pages/blog/[id].vue";
import __pages_import_9__ from "/examples/vue/src/pages/blog/index.vue";
import __pages_import_10__ from "/examples/vue/src/pages/blog/today/[...all].vue";
import __pages_import_11__ from "/examples/vue/src/pages/blog/today/index.vue";
import __pages_import_12__ from "/examples/vue/src/pages/components.vue";
import __pages_import_13__ from "/examples/vue/src/pages/index.vue";

const routes = [{"name":"all","path":"/:all(.*)*","component":__pages_import_0__,"props":true},{"name":"sensor","path":"/:sensor","component":__pages_import_1__,"children":[{"name":"sensor-current","path":"current","component":__pages_import_2__,"props":true}],"props":true},{"path":"/about","component":__pages_import_3__,"children":[{"name":"about-user-id","path":":id","component":__pages_import_4__,"children":[{"name":"about-id-more","path":"more","component":__pages_import_5__,"props":true},{"name":"about-id-nested","path":"nested","component":__pages_import_6__,"props":true}],"props":true,"meta":{"requiresAuth":true}},{"name":"about","path":"","component":__pages_import_7__,"props":true}],"props":true,"meta":{"lang":"yml"}},{"name":"blog-id","path":"/blog/:id","component":__pages_import_8__,"props":true,"meta":{"requiresAuth":false}},{"name":"blog","path":"/blog","component":__pages_import_9__,"props":true},{"name":"blog-today-all","path":"/blog/today/:all(.*)","component":__pages_import_10__,"props":true},{"name":"blog-today","path":"/blog/today","component":__pages_import_11__,"props":true},{"name":"components","path":"/components","component":__pages_import_12__,"props":true,"meta":{"lang":"yaml"}},{"name":"homepage","path":"/","component":__pages_import_13__,"props":true,"meta":{"requiresAuth":false}}];

export default routes;"
`;

exports[`generate routes > vue - sync mode match snapshot > routes 1`] = `
[
  {
    "component": "/examples/vue/src/pages/[...all].vue",
    "customBlock": undefined,
    "name": "all",
    "path": "/:all(.*)*",
    "props": true,
  },
  {
    "children": [
      {
        "component": "/examples/vue/src/pages/[sensor]/current.vue",
        "customBlock": undefined,
        "name": "sensor-current",
        "path": "current",
        "props": true,
      },
    ],
    "component": "/examples/vue/src/pages/[sensor].vue",
    "customBlock": undefined,
    "name": "sensor",
    "path": "/:sensor",
    "props": true,
  },
  {
    "children": [
      {
        "children": [
          {
            "component": "/examples/vue/src/pages/about/[id]/more.vue",
            "customBlock": undefined,
            "name": "about-id-more",
            "path": "more",
            "props": true,
          },
          {
            "component": "/examples/vue/src/pages/about/[id]/nested.vue",
            "customBlock": undefined,
            "name": "about-id-nested",
            "path": "nested",
            "props": true,
          },
        ],
        "component": "/examples/vue/src/pages/about/[id].vue",
        "meta": {
          "requiresAuth": true,
        },
        "name": "about-user-id",
        "path": ":id",
        "props": true,
      },
      {
        "component": "/examples/vue/src/pages/about/index.vue",
        "customBlock": undefined,
        "name": "about",
        "path": "",
        "props": true,
      },
    ],
    "component": "/examples/vue/src/pages/about.vue",
    "meta": {
      "lang": "yml",
    },
    "path": "/about",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/blog/[id].vue",
    "meta": {
      "requiresAuth": false,
    },
    "name": "blog-id",
    "path": "/blog/:id",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/blog/index.vue",
    "customBlock": undefined,
    "name": "blog",
    "path": "/blog",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/blog/today/[...all].vue",
    "customBlock": undefined,
    "name": "blog-today-all",
    "path": "/blog/today/:all(.*)",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/blog/today/index.vue",
    "customBlock": undefined,
    "name": "blog-today",
    "path": "/blog/today",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/components.vue",
    "meta": {
      "lang": "yaml",
    },
    "name": "components",
    "path": "/components",
    "props": true,
  },
  {
    "component": "/examples/vue/src/pages/index.vue",
    "meta": {
      "requiresAuth": false,
    },
    "name": "homepage",
    "path": "/",
    "props": true,
  },
]
`;
